--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
   }
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
@@ -74,4 +74,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
